--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body style="margin: 0; padding: 0;">
-        <div id="app"></div>
-        <script src="https://threejs.org/build/three.min.js"></script>
+        <!-- <div id="app"></div> -->
+        <!-- <script src="https://threejs.org/build/three.min.js"></script> -->
     </body>
 </html>
